p.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-profile
spec:
  selector:
    matchLabels:
      env: profile
  replicas: 3
  template:
    metadata:
      labels:
        env: profile
    spec:
      containers:
        - name: deploy
          image: selhawary/app-node-js
          ports:
            - containerPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  type: ClusterIP
  selector:
    env: profile
  ports:
  -  port: 2500
     targetPort: 3000
