s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  selector:
    matchLabels:
      env: prod
  replicas: 3
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: deploy
          image: selhawary/angular-app
          ports:
            - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  type: ClusterIP
  selector:
    env: prod
  ports:
  -  port: 2000
     targetPort: 80
