ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ing-lb-552947888.us-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /angular
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 2000


      - path: /node
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 2500
